Made site more mobile compatible Fixed some mobile css issues Moved Navbar to bottom on mobile

--- a/src/components/css/About.css
+++ b/src/components/css/About.css
@@ -1,6 +1,8 @@
 .About {
     background-color: #3F3F4A;
-    color: #AA9AA0
+    color: #AA9AA0;
+    padding-bottom: 5.5rem;
+
 }
 
 .About .title {
