--- a/src/components/css/Github.css
+++ b/src/components/css/Github.css
@@ -59,10 +59,13 @@
     display: flex;
     flex-direction: row;
     padding: 10px;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .repo .language {
     padding: 5px;
+    margin: 2px;
     margin-left: 5px;
     border-radius: 10px;
     background-color: #AAAAAA;
